# inky-cpp

./: .gitattributes  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: test.yml
docs/: porting-status.md
examples/: board_buttons.cpp  board_led.cpp  e673_image.cpp  image_loader.cpp  image_loader.hpp
include/inky/: board.hpp  e673.hpp  gpio.hpp  hardware.hpp  spi.hpp
include/inky/hw/: libgpiod.hpp  spidev.hpp
src/: board.cpp  e673.cpp  hardware.cpp  palette.cpp  palette.hpp
src/hw/: libgpiod_gpio.cpp  spidev_spi.cpp
tests/: test.hpp  test_board.cpp  test_e673.cpp  test_image_loader.cpp  test_main.cpp  test_palette.cpp
